--- a/script.html
+++ b/script.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfolio Embed Gallery</title>
+<title>Customizable Embed Gallery</title>
 <style>
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -19,7 +19,7 @@
 
   .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 20px;
     justify-items: center;
     margin-bottom: 40px;
@@ -27,31 +27,44 @@
 
   .card {
     position: relative;
-    width: 200px;
-    cursor: pointer;
+    width: 220px;
+    height: 140px;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    transition: transform 0.2s, box-shadow 0.2s;
+    cursor: pointer;
     background-color: white;
+    display: flex;
+    flex-direction: column;
   }
 
-  .card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 25px rgba(0,0,0,0.3);
-  }
-
-  .card img {
+  .card iframe {
     width: 100%;
-    height: 120px;
-    object-fit: cover;
+    height: 100px;
+    border: none;
   }
 
   .card .title {
     text-align: center;
-    padding: 10px;
     font-weight: bold;
-    font-size: 16px;
+    padding: 5px 0;
+    font-size: 14px;
+  }
+
+  .card .edit-icon {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 18px;
+    background: rgba(0,0,0,0.5);
+    color: white;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
   }
 
   .embed-container {
@@ -59,7 +72,7 @@
     justify-content: center;
   }
 
-  iframe {
+  iframe#embedFrame {
     width: 90%;
     height: 600px;
     border: 2px solid #ccc;
@@ -69,54 +82,74 @@
 </head>
 <body>
 
-<h1>My Portfolio Gallery</h1>
+<h1>Customizable Portfolio Gallery</h1>
 
-<!-- Gallery of portfolio items -->
-<div class="gallery">
-  <div class="card" onclick="loadEmbed(0)">
-    <img src="https://via.placeholder.com/200x120.png?text=Preview+1" alt="Preview 1">
-    <div class="title">Project 1</div>
-  </div>
+<div class="gallery" id="gallery"></div>
 
-  <div class="card" onclick="loadEmbed(1)">
-    <img src="https://via.placeholder.com/200x120.png?text=Preview+2" alt="Preview 2">
-    <div class="title">Project 2</div>
-  </div>
-
-  <div class="card" onclick="loadEmbed(2)">
-    <img src="https://via.placeholder.com/200x120.png?text=Preview+3" alt="Preview 3">
-    <div class="title">Project 3</div>
-  </div>
-
-  <div class="card" onclick="loadEmbed(3)">
-    <img src="https://via.placeholder.com/200x120.png?text=Preview+4" alt="Preview 4">
-    <div class="title">Project 4</div>
-  </div>
-
-  <div class="card" onclick="loadEmbed(4)">
-    <img src="https://via.placeholder.com/200x120.png?text=Preview+5" alt="Preview 5">
-    <div class="title">Project 5</div>
-  </div>
-</div>
-
-<!-- Embedded iframe -->
 <div class="embed-container">
   <iframe id="embedFrame" src="" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <script>
-  // Index of embed links - fill in your URLs
-  const links = [
-    "1ball.st", // Project 1 URL
-    "https://satoru.one/", // Project 2 URL
-    "neal.fun", // Project 3 URL
-    "", // Project 4 URL
-    ""  // Project 5 URL
-  ];
+const defaultProjects = [
+  {name: "Project 1", url: "https://example.com"},
+  {name: "Project 2", url: "https://example.com"},
+  {name: "Project 3", url: "https://example.com"},
+  {name: "Project 4", url: "https://example.com"},
+  {name: "Project 5", url: "https://example.com"},
+];
 
-  function loadEmbed(index) {
-    document.getElementById('embedFrame').src = links[index];
-  }
+// Load saved projects from localStorage or use default
+let projects = JSON.parse(localStorage.getItem('projects')) || defaultProjects;
+
+const gallery = document.getElementById('gallery');
+const embedFrame = document.getElementById('embedFrame');
+
+function saveProjects() {
+  localStorage.setItem('projects', JSON.stringify(projects));
+}
+
+function loadEmbed(index) {
+  embedFrame.src = projects[index].url;
+}
+
+function renderGallery() {
+  gallery.innerHTML = "";
+  projects.forEach((project, index) => {
+    const card = document.createElement('div');
+    card.className = 'card';
+
+    const iframe = document.createElement('iframe');
+    iframe.src = project.url;
+    card.appendChild(iframe);
+
+    const title = document.createElement('div');
+    title.className = 'title';
+    title.textContent = project.name;
+    card.appendChild(title);
+
+    const editIcon = document.createElement('div');
+    editIcon.className = 'edit-icon';
+    editIcon.textContent = '…';
+    editIcon.onclick = (e) => {
+      e.stopPropagation();
+      const newName = prompt("Enter project name:", project.name);
+      const newURL = prompt("Enter project URL:", project.url);
+      if(newName !== null) project.name = newName;
+      if(newURL !== null) project.url = newURL;
+      saveProjects();
+      renderGallery();
+    };
+    card.appendChild(editIcon);
+
+    card.onclick = () => loadEmbed(index);
+
+    gallery.appendChild(card);
+  });
+}
+
+// Initial render
+renderGallery();
 </script>
 
 </body>
