--- a/script.html
+++ b/script.html
@@ -2,170 +2,191 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Always Embed Portfolio Gallery</title>
+<title>Embed Gallery</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    background: #f0f2f5;
-  }
-  h1 {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 20px;
-    justify-items: center;
-    margin-bottom: 40px;
-  }
-  .card {
-    position: relative;
-    width: 220px;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    cursor: pointer;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-  }
-  .card img {
-    width: 100%;
-    height: 120px;
-    object-fit: cover;
-  }
-  .card .title {
-    text-align: center;
-    font-weight: bold;
-    padding: 5px;
-    font-size: 14px;
-  }
-  .card .edit-icon {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    font-size: 18px;
-    background: rgba(0,0,0,0.5);
-    color: white;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-  }
-  .embed-container {
-    display: flex;
-    justify-content: center;
-  }
-  iframe#embedFrame {
-    width: 90%;
-    height: 600px;
-    border: 2px solid #ccc;
-    border-radius: 8px;
-    display: block;
-    margin: 0 auto;
-  }
-  #fallbackNotice {
-    text-align: center;
-    font-size: 14px;
-    color: #555;
-    margin-top: 5px;
-  }
+    body {
+        font-family: Arial, sans-serif;
+        background: #0f0f0f;
+        margin: 0;
+        padding: 40px;
+        color: white;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 36px;
+        margin-bottom: 30px;
+    }
+
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+        gap: 25px;
+    }
+
+    .card {
+        background: #1b1b1b;
+        border-radius: 16px;
+        overflow: hidden;
+        position: relative;
+        box-shadow: 0 0 20px rgba(0,0,0,0.4);
+        transition: 0.3s;
+    }
+
+    .card:hover {
+        transform: scale(1.02);
+        box-shadow: 0 0 25px rgba(0,0,0,0.7);
+    }
+
+    .preview-wrapper {
+        width: 100%;
+        height: 200px;
+        background: #111;
+        position: relative;
+    }
+
+    iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+        background: black;
+    }
+
+    .fallback-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: none;
+    }
+
+    .title {
+        font-size: 20px;
+        padding: 15px;
+        font-weight: bold;
+    }
+
+    .menu-btn {
+        position: absolute;
+        top: 8px;
+        right: 10px;
+        background: rgba(0,0,0,0.6);
+        border: none;
+        color: white;
+        font-size: 22px;
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+
+    .menu-panel {
+        position: absolute;
+        right: 10px;
+        top: 45px;
+        background: #222;
+        padding: 12px;
+        border-radius: 10px;
+        display: none;
+        flex-direction: column;
+        gap: 8px;
+        z-index: 99;
+    }
+
+    .menu-panel input {
+        width: 200px;
+        padding: 6px;
+        border-radius: 6px;
+        border: 1px solid #555;
+        background: #111;
+        color: white;
+    }
+
+    .save-btn {
+        background: #00aaff;
+        color: black;
+        border: none;
+        padding: 8px;
+        border-radius: 6px;
+        cursor: pointer;
+    }
 </style>
 </head>
 <body>
 
-<h1>Always-Embed Portfolio Gallery</h1>
-
+<h1>Website Embed Portfolio</h1>
 <div class="gallery" id="gallery"></div>
 
-<div class="embed-container">
-  <iframe id="embedFrame" src="" frameborder="0" allowfullscreen></iframe>
-</div>
-<div id="fallbackNotice"></div>
-
 <script>
-const defaultProjects = [
-  {name: "Wikipedia", url: "https://en.wikipedia.org/wiki/Main_Page", img: "https://via.placeholder.com/220x120.png?text=Wikipedia"},
-  {name: "Example", url: "https://example.com", img: "https://via.placeholder.com/220x120.png?text=Example"},
-  {name: "Project 3", url: "", img: "https://via.placeholder.com/220x120.png?text=Preview+3"},
-  {name: "Project 4", url: "", img: "https://via.placeholder.com/220x120.png?text=Preview+4"},
-  {name: "Project 5", url: "", img: "https://via.placeholder.com/220x120.png?text=Preview+5"},
+let sites = JSON.parse(localStorage.getItem("embedSites")) || [
+    { name: "", url: "", img: "" },
+    { name: "", url: "", img: "" },
+    { name: "", url: "", img: "" }
 ];
 
-let projects = JSON.parse(localStorage.getItem('projects')) || defaultProjects;
-
-const gallery = document.getElementById('gallery');
-const embedFrame = document.getElementById('embedFrame');
-const fallbackNotice = document.getElementById('fallbackNotice');
-
-function saveProjects() {
-  localStorage.setItem('projects', JSON.stringify(projects));
+// SAVE
+function save() {
+    localStorage.setItem("embedSites", JSON.stringify(sites));
 }
 
-function renderGallery() {
-  gallery.innerHTML = "";
-  projects.forEach((project, index) => {
-    const card = document.createElement('div');
-    card.className = 'card';
+// BUILD CARDS
+function render() {
+    const gallery = document.getElementById("gallery");
+    gallery.innerHTML = "";
 
-    const img = document.createElement('img');
-    img.src = project.img;
-    card.appendChild(img);
+    sites.forEach((site, index) => {
+        let card = document.createElement("div");
+        card.className = "card";
 
-    const title = document.createElement('div');
-    title.className = 'title';
-    title.textContent = project.name;
-    card.appendChild(title);
+        card.innerHTML = `
+            <div class="preview-wrapper">
+                <iframe src="${site.url}" data-index="${index}" onload="checkEmbed(event)"></iframe>
+                <img src="${site.img}" class="fallback-img" id="fallback-${index}">
+                <button class="menu-btn" onclick="toggleMenu(${index})">⋮</button>
 
-    const editIcon = document.createElement('div');
-    editIcon.className = 'edit-icon';
-    editIcon.textContent = '…';
-    editIcon.onclick = (e) => {
-      e.stopPropagation();
-      const newName = prompt("Project Name:", project.name);
-      const newURL = prompt("Project URL:", project.url);
-      const newImg = prompt("Preview Image URL:", project.img);
-      if(newName !== null) project.name = newName;
-      if(newURL !== null) project.url = newURL;
-      if(newImg !== null) project.img = newImg;
-      saveProjects();
-      renderGallery();
-    };
-    card.appendChild(editIcon);
+                <div class="menu-panel" id="menu-${index}">
+                    <input placeholder="Website Name" value="${site.name}" id="name-${index}">
+                    <input placeholder="Embed URL" value="${site.url}" id="url-${index}">
+                    <input placeholder="Preview Image URL" value="${site.img}" id="img-${index}">
+                    <button class="save-btn" onclick="updateSite(${index})">Save</button>
+                </div>
+            </div>
+            <div class="title">${site.name || "Unnamed Site"}</div>
+        `;
 
-    card.onclick = () => {
-      if (!project.url) {
-        embedFrame.src = "";
-        fallbackNotice.textContent = "No URL provided for this project.";
-        return;
-      }
-
-      embedFrame.src = project.url;
-      fallbackNotice.textContent = "";
-
-      // Detect if iframe failed (common with X-Frame-Options)
-      setTimeout(() => {
-        try {
-          const doc = embedFrame.contentDocument || embedFrame.contentWindow.document;
-          // If accessing document fails, site is blocking
-        } catch(e) {
-          embedFrame.src = project.img; // show preview instead
-          fallbackNotice.textContent = "Site cannot be embedded. Showing preview image.";
-        }
-      }, 500);
-    };
-
-    gallery.appendChild(card);
-  });
+        gallery.appendChild(card);
+    });
 }
 
-renderGallery();
+// TOGGLE MENU
+function toggleMenu(i) {
+    const menu = document.getElementById("menu-" + i);
+    menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+}
+
+// SAVE CHANGES
+function updateSite(i) {
+    sites[i].name = document.getElementById("name-" + i).value;
+    sites[i].url = document.getElementById("url-" + i).value;
+    sites[i].img = document.getElementById("img-" + i).value;
+    save();
+    render();
+}
+
+// EMBED CHECKER (detects CSP blocks)
+function checkEmbed(e) {
+    let iframe = e.target;
+    let index = iframe.getAttribute("data-index");
+
+    try {
+        // Attempt to access iframe → throws error if blocked
+        let test = iframe.contentWindow.location.href;
+    } catch (err) {
+        iframe.style.display = "none";
+        document.getElementById("fallback-" + index).style.display = "block";
+    }
+}
+
+render();
 </script>
 
 </body>
