--- a/script.html
+++ b/script.html
@@ -2,166 +2,137 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Embed Portfolio Gallery</title>
+<title>Portfolio Embed Gallery</title>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background: #0f0f0f;
-        margin: 0;
-        padding: 40px;
-        color: white;
-    }
+body {
+    font-family: Arial, sans-serif;
+    background: #0f0f0f;
+    margin: 0;
+    padding: 40px;
+    color: white;
+}
+h1 {
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 30px;
+}
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    gap: 25px;
+}
+.card {
+    background: #1b1b1b;
+    border-radius: 16px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 0 25px rgba(0,0,0,0.5);
+}
+.preview-area {
+    width: 100%;
+    height: 150px;
+    background: #111;
+    position: relative;
+    overflow: hidden;
+}
+.preview-iframe {
+    width: 400%;
+    height: 400%;
+    transform: scale(0.25);
+    transform-origin: top left;
+    border: none;
+    pointer-events: none; /* disable interaction */
+}
+.preview-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: none;
+}
+.title {
+    padding: 12px;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+}
+.menu-panel {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+.menu-panel input {
+    padding: 6px;
+    border-radius: 6px;
+    border: 1px solid #555;
+    background: #111;
+    color: white;
+}
+.save-btn {
+    background: #00aaff;
+    color: black;
+    border: none;
+    padding: 6px 12px;
+    border-radius: 6px;
+    cursor: pointer;
+}
 
-    h1 {
-        text-align: center;
-        font-size: 36px;
-        margin-bottom: 30px;
-    }
-
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-        gap: 25px;
-    }
-
-    .card {
-        background: #1b1b1b;
-        border-radius: 16px;
-        overflow: hidden;
-        position: relative;
-        cursor: pointer;
-        transition: 0.3s;
-    }
-
-    .card:hover {
-        transform: scale(1.03);
-        box-shadow: 0 0 25px rgba(0,0,0,0.5);
-    }
-
-    /* Preview box */
-    .preview-area {
-        width: 100%;
-        height: 150px;
-        background: #111;
-        overflow: hidden;
-        position: relative;
-    }
-
-    .preview-iframe {
-        width: 400%;
-        height: 400%;
-        transform: scale(0.25);
-        transform-origin: top left;
-        border: none;
-        pointer-events: none; /* Disable interaction in preview */
-    }
-
-    .preview-img {
-        width: 100%;
-        height: 100%;
-        display: none;
-        object-fit: cover;
-    }
-
-    .title {
-        padding: 12px;
-        font-weight: bold;
-        font-size: 18px;
-    }
-
-    .menu-btn {
-        position: absolute;
-        top: 8px;
-        right: 10px;
-        background: rgba(0,0,0,0.6);
-        border: none;
-        color: white;
-        font-size: 20px;
-        width: 28px;
-        height: 28px;
-        border-radius: 50%;
-        cursor: pointer;
-        z-index: 10;
-    }
-
-    .menu-panel {
-        position: absolute;
-        right: 10px;
-        top: 45px;
-        background: #222;
-        padding: 12px;
-        border-radius: 10px;
-        display: none;
-        flex-direction: column;
-        gap: 8px;
-        z-index: 20;
-    }
-
-    .menu-panel input {
-        width: 200px;
-        padding: 6px;
-        border-radius: 6px;
-        border: 1px solid #555;
-        background: #111;
-        color: white;
-    }
-
-    .save-btn {
-        background: #00aaff;
-        color: black;
-        border: none;
-        padding: 8px;
-        border-radius: 6px;
-        cursor: pointer;
-    }
-
-    /* FULL-SCREEN VIEWER */
-    #viewer {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: black;
-        display: none;
-        flex-direction: column;
-    }
-
-    #viewer iframe {
-        width: 100%;
-        height: 100%;
-        border: none;
-    }
-
-    #backBtn {
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        background: white;
-        color: black;
-        padding: 10px 16px;
-        border-radius: 8px;
-        cursor: pointer;
-        z-index: 50;
-        font-size: 16px;
-        border: none;
-    }
-
-    #viewerFallback {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: none;
-    }
+/* FULLSCREEN VIEWER */
+#viewer {
+    position: fixed;
+    top:0; left:0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    display: none;
+    flex-direction: column;
+    z-index: 100;
+}
+#viewer iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+#viewerFallback {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: none;
+}
+#backBtn {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background: white;
+    color: black;
+    padding: 10px 16px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+    border: none;
+    z-index: 101;
+}
 </style>
 </head>
 <body>
 
-<h1>Website Embed Portfolio</h1>
+<h1>Portfolio Embed Gallery</h1>
+
+<div class="menu-panel">
+    <input id="nameInput" placeholder="Website Name">
+    <input id="urlInput" placeholder="Embed URL">
+    <input id="imgInput" placeholder="Preview Image URL">
+    <button class="save-btn" onclick="addSite()">Add Site</button>
+</div>
 
 <div class="gallery" id="gallery"></div>
 
-<!-- FULLSCREEN VIEWER -->
+<!-- Fullscreen viewer -->
 <div id="viewer">
     <button id="backBtn" onclick="closeViewer()">← Back</button>
     <iframe id="viewerFrame"></iframe>
@@ -169,77 +140,65 @@
 </div>
 
 <script>
-let sites = JSON.parse(localStorage.getItem("embedSites")) || [
-    { name: "", url: "", img: "" },
-    { name: "", url: "", img: "" },
-    { name: "", url: "", img: "" }
-];
+// Load saved sites
+let sites = JSON.parse(localStorage.getItem("embedSites")) || [];
 
-function save() {
-    localStorage.setItem("embedSites", JSON.stringify(sites));
-}
+// Save to localStorage
+function save() { localStorage.setItem("embedSites", JSON.stringify(sites)); }
 
+// Render gallery
 function render() {
     const gallery = document.getElementById("gallery");
     gallery.innerHTML = "";
-
     sites.forEach((site, i) => {
-        let c = document.createElement("div");
-        c.className = "card";
+        const card = document.createElement("div");
+        card.className = "card";
+        card.onclick = () => openViewer(i);
 
-        c.innerHTML = `
-            <div class="preview-area" onclick="openViewer(${i})">
+        card.innerHTML = `
+            <div class="preview-area">
                 <iframe class="preview-iframe" src="${site.url}" data-i="${i}" onload="checkPreview(event)"></iframe>
-                <img id="pimg-${i}" class="preview-img" src="${site.img}">
-                <button class="menu-btn" onclick="event.stopPropagation();toggleMenu(${i})">⋮</button>
-                <div class="menu-panel" id="menu-${i}">
-                    <input id="name-${i}" placeholder="Website Name" value="${site.name}">
-                    <input id="url-${i}" placeholder="Embed URL" value="${site.url}">
-                    <input id="img-${i}" placeholder="Preview Image URL" value="${site.img}">
-                    <button class="save-btn" onclick="updateSite(${i})">Save</button>
-                </div>
+                <img class="preview-img" id="pimg-${i}" src="${site.img}">
             </div>
             <div class="title">${site.name || "Unnamed Site"}</div>
         `;
-
-        gallery.appendChild(c);
+        gallery.appendChild(card);
     });
 }
 
-function toggleMenu(i) {
-    let m = document.getElementById("menu-" + i);
-    m.style.display = m.style.display === "flex" ? "none" : "flex";
-}
-
-function updateSite(i) {
-    sites[i].name = document.getElementById("name-" + i).value;
-    sites[i].url  = document.getElementById("url-" + i).value;
-    sites[i].img  = document.getElementById("img-" + i).value;
+// Add new site
+function addSite() {
+    const name = document.getElementById("nameInput").value;
+    const url = document.getElementById("urlInput").value;
+    const img = document.getElementById("imgInput").value;
+    if(!url && !img && !name) return;
+    sites.push({name, url, img});
     save();
     render();
+    document.getElementById("nameInput").value = "";
+    document.getElementById("urlInput").value = "";
+    document.getElementById("imgInput").value = "";
 }
 
+// Preview iframe fallback
 function checkPreview(e) {
-    let iframe = e.target;
-    let i = iframe.getAttribute("data-i");
-
+    const iframe = e.target;
+    const i = iframe.getAttribute("data-i");
     try { iframe.contentWindow.location.href; }
-    catch (err) {
+    catch(err) {
         iframe.style.display = "none";
         document.getElementById("pimg-" + i).style.display = "block";
     }
 }
 
-/* FULL SCREEN VIEWER */
+// Fullscreen viewer
 function openViewer(i) {
-    let viewer = document.getElementById("viewer");
-    let frame = document.getElementById("viewerFrame");
-    let fallback = document.getElementById("viewerFallback");
-
+    const viewer = document.getElementById("viewer");
+    const frame = document.getElementById("viewerFrame");
+    const fallback = document.getElementById("viewerFallback");
     viewer.style.display = "flex";
-    fallback.style.display = "none";
     frame.style.display = "block";
-
+    fallback.style.display = "none";
     frame.src = sites[i].url;
 
     setTimeout(() => {
@@ -249,9 +208,8 @@ function openViewer(i) {
             fallback.src = sites[i].img;
             fallback.style.display = "block";
         }
-    }, 800);
+    }, 500);
 }
-
 function closeViewer() {
     document.getElementById("viewer").style.display = "none";
     document.getElementById("viewerFrame").src = "";
