--- a/script.html
+++ b/script.html
@@ -1,164 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Embed Portfolio Gallery</title>
-<style>
-
-body {
-  background: #111;
-  color: white;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-}
-
-h1 {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 20px;
-  padding-bottom: 50px;
-}
-
-.card {
-  background: #1a1a1a;
-  border-radius: 12px;
-  padding: 15px;
-  cursor: pointer;
-  transition: 0.2s;
-  border: 1px solid #333;
-}
-
-.card:hover {
-  transform: scale(1.02);
-}
-
-.card-title {
-  font-size: 18px;
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.preview-wrapper {
-  pointer-events: none; 
-}
-
-#viewer {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: #000;
-  display: none;
-  z-index: 9999;
-}
-
-#viewerContent {
-  width: 100%;
-  height: calc(100% - 50px);
-  overflow: auto;
-  padding: 20px;
-}
-
-#backBtn {
-  position: fixed;
-  top: 10px; left: 10px;
-  padding: 10px 15px;
-  background: #fff;
-  color: #000;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  z-index: 10000;
-}
-
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embedded Google Search</title>
 </head>
 <body>
+    <h1>Google Search Embed</h1>
 
-<h1>Embed Portfolio Gallery</h1>
+    <!-- Google Custom Search Element -->
+    <div id="cse" style="width: 100%;"></div>
 
-<div class="gallery" id="gallery"></div>
-
-<div id="viewer">
-  <button id="backBtn" onclick="closeViewer()">← Back</button>
-  <div id="viewerContent"></div>
-</div>
-
-<script>
-
-// --- Your Embed Items Here ---
-const items = [
-  {
-    title: "Google Full Object Embed",
-    type: "object",
-    objectURL: "https://www.google.com/"
-  },
-
-  {
-    title: "Example Site (Iframe Embed)",
-    type: "iframe",
-    url: "https://example.com"
-  }
-];
-
-
-// -------- BUILD GALLERY --------
-function buildGallery() {
-  const gallery = document.getElementById("gallery");
-  gallery.innerHTML = "";
-
-  items.forEach((item, index) => {
-    const card = document.createElement("div");
-    card.className = "card";
-    card.onclick = () => openViewer(index);
-
-    let previewHTML = "";
-    if (item.type === "object") {
-      previewHTML = `<object type="text/html" data="${item.objectURL}" width="100%" height="140"></object>`;
-    } else {
-      previewHTML = `<iframe src="${item.url}" style="width:100%;height:140px;border:none;pointer-events:none;"></iframe>`;
-    }
-
-    card.innerHTML = `
-      <div class="card-title">${item.title}</div>
-      <div class="preview-wrapper">
-        ${previewHTML}
-      </div>
-    `;
-
-    gallery.appendChild(card);
-  });
-}
-
-buildGallery();
-
-
-// -------- OPEN VIEWER --------
-function openViewer(index) {
-  const viewer = document.getElementById("viewer");
-  const content = document.getElementById("viewerContent");
-  const item = items[index];
-
-  viewer.style.display = "block";
-
-  if (item.type === "object") {
-    content.innerHTML = `<object type="text/html" data="${item.objectURL}" width="100%" height="100%"></object>`;
-  } else {
-    content.innerHTML = `<iframe src="${item.url}" style="width:100%;height:100%;border:none;"></iframe>`;
-  }
-}
-
-function closeViewer() {
-  document.getElementById("viewer").style.display = "none";
-  document.getElementById("viewerContent").innerHTML = "";
-}
-
-</script>
-
+    <script async src="https://cse.google.com/cse.js?cx=YOUR_CSE_ID"></script>
 </body>
 </html>
