--- a/script.html
+++ b/script.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<iframe src="https://redirect.invidious.io/" allowfullscreen></iframe>
+<iframe src="https://yewtu.be/" allowfullscreen></iframe>
 
 </body>
 </html>
