Change title and iframe source in script.html

--- a/script.html
+++ b/script.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Invidious Embed</title>
+<title>Free Anime</title>
 <style>
   html, body {
     margin: 0;
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<iframe src="https://yewtu.be/" allowfullscreen></iframe>
+<iframe src="https://satoru.one/" allowfullscreen></iframe>
 
 </body>
 </html>
