--- a/anime.html
+++ b/anime.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="/schoology.png">
-    <link rel="apple-touch-icon" href="/schoology.png">
+<link rel="icon" type="image/png" href="schoology.png">
 <title>Home | Schoology</title>
 <style>
   html, body {
