Update favicon link in anime.html

--- a/secondpage/anime.html
+++ b/secondpage/anime.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="schoology.png">
+<link rel="icon" type="image/png" href="IMG_0616.png">
 <title>Home | Schoology</title>
 <style>
   html, body {
