--- a/cloaks/anime.html
+++ b/cloaks/anime.html
@@ -11,7 +11,7 @@
 const UIs = [
     "clever.html",
     "google.html",
-    "ui3.html"
+    "schoology.html"
 ];
 
 const randomUI = UIs[Math.floor(Math.random() * UIs.length)];
